# z_project

./: .githook.sh  .gitignore  CMakeLists.txt  README.md  makefile  postinst
app/: CMakeLists.txt
app/ipc_app/: CMakeLists.txt  pub_node.cpp  sub_node.cpp
app/timer_app/: CMakeLists.txt  timer_node.cpp
cmake/: debug.cmake  option.cmake  pack.cmake
cmake/modules/: filter_compile_commands.py  git_hash.cmake  static_check.cmake
modules/: CMakeLists.txt
modules/common/: CMakeLists.txt
modules/common/include/common/: config.hpp  file_manager.hpp  logger.hpp  logger_cv_formatter.hpp  pch.h  safe_queue.hpp  singleton.hpp  thread_pool.hpp  timecost_utils.hpp
modules/common/src/: config.cpp  file_manager.cpp  logger.cpp  timecost_utils.cpp
modules/ipc/: CMakeLists.txt
modules/ipc/include/ipc/: message_queue.hpp
modules/ipc/src/: message_queue.cpp
serve/: z-zproject.service
src/: CMakeLists.txt  pch.h
src/common/: config.cpp  config.h  file_manager.cpp  file_manager.h  logger.cpp  logger.h  logger_eigen_formatter.h  make_unique.h  safe_queue.h  thread_pool.h  timecost_utils.cpp  timecost_utils.h  timer.h
src/ipc/: message_queue.cpp  message_queue.h
tools/: plot_time.py
xslt/: cppcheck_report.xslt
